<resources>
    <string name="app_name">Science Up</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Log in</string>

    <string name="login">Log In</string>
    <string name="sap_id">SAP ID</string>
    <string name="password">Password</string>
    <string name="chatroom">Chatroom</string>
    <string name="discussions">Discussions</string>
    <string name="faculty_forums">Faculty Forums</string>

    <string name="placeholder_time">9:30 \u2014 11:30</string>
    <string name="placeholder_subject">Project Presentation</string>
    <string name="placeholder_room">8007</string>

    <string name="sub_1">Subject 1</string>
    <string name="sub_2">Subject 2</string>
    <string name="sub_3">Subject 3</string>
    <string name="sub_4">Subject 4</string>
    <string name="sub_5">Subject 5</string>

    <string name="title_activity_academics">Academics</string>
    <string name="title_activity_announcements">Announcements</string>
    <string name="title_activity_timetable">Timetable</string>
    <string name="title_activity_assignments">Assignments</string>
    <string name="title_activity_test">Test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_chatroom">Chatroom</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Connecting students and teachers</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="day_1">Monday</string>
    <string name="day_2">Tueday</string>
    <string name="day_3">Wednesday</string>
    <string name="day_4">Thursday</string>
    <string name="day_5">Friday</string>
    <string name="day_6">Saturday</string>
    <string name="day_7">Sunday</string>

    <string name="dialog_selection_request">Please select your option</string>
    <string name="dialog_selection_choice">Choose your option</string>
    <string name="copy">Copy</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="timing_to">to</string>
    <string name="add_new_class">Add a new class</string>
    <string name="placeholder_subject_name">Subject Name</string>
    <string name="placeholder_room_dialog">Room</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="shift">Shift</string>
    <string name="dialog_shift_query">Where do you want shift this task?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="deletion_confirmation">Are you sure you want to delete this entry?</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_create_short">Create a new account</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_username">This user does not exist</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="title_activity_settings">Settings</string>

    <string name="title_activity_study_material">Study Material</string>
    <string name="title_activity_attendance">Attendance</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_trends">Trends</string>
    <string name="title_activity_campus_radio">CampusRadio</string>
    <string name="title_activity_sos">SOS</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_radio_add">RadioAdd</string>
    <string name="title_activity_settings__test">Settings_Test</string>
</resources>
