<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/title_activity_chatroom" />
        <item
            android:id="@+id/nav_academics"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/title_activity_academics" />
        <item
            android:id="@+id/nav_content"
            android:icon="@drawable/ic_insert_drive_file_black_24dp"
            android:title="@string/title_activity_study_material" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_insert_chart_black_24dp"
            android:title="@string/title_activity_attendance" />
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/ic_grid_on_black_24dp"
            android:title="@string/title_activity_timetable" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/title_activity_feedback" />
        <item
            android:id="@+id/nav_trends"
            android:icon="@drawable/ic_trending_up_black_24dp"
            android:title="@string/title_activity_trends" />
        <item
            android:id="@+id/nav_radio"
            android:icon="@drawable/ic_radio_black_24dp"
            android:title="@string/title_activity_campus_radio" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/title_activity_settings" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
