<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="301dp"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light"
    android:orientation="vertical">


    <TextView
        android:id="@+id/heading"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:paddingBottom="0dp"
        android:paddingStart="@dimen/dialog_padding_horizontal"
        android:paddingEnd="@dimen/dialog_padding_horizontal"
        android:paddingTop="30dp"
        android:text="@string/dialog_selection_request"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="0dp"
        android:padding="10dp"
        android:paddingStart="@dimen/dialog_padding_horizontal"
        android:paddingEnd="@dimen/dialog_padding_horizontal"
        android:text="@string/dialog_selection_choice"
        android:textColor="#000" />

    <Button
        android:id="@+id/edit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_dia"
        android:layout_gravity="center"
        android:layout_marginStart="0.5dp"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:text="@string/edit"
        android:textColor="?attr/colorAccent" />

    <Button
        android:id="@+id/delete"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_dia"
        android:layout_gravity="center"
        android:layout_marginStart="0.5dp"
        android:layout_toEndOf="@+id/edit"
        android:background="#fff"
        android:clickable="true"
        android:focusable="true"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:text="@string/delete"
        android:textColor="?attr/colorAccent" />

</RelativeLayout>
