<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="301dp"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light"
    android:orientation="vertical">


    <TextView
        android:id="@+id/header"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:paddingBottom="10dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="25dp"
        android:text="@string/add_new_class"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:id="@+id/timings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/from"
            android:layout_width="match_parent"
            android:layout_weight="1.0"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timings">

        <EditText
            android:id="@+id/edit_text_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusedByDefault="true"
            android:focusable="false"
            android:layout_marginStart="15dp"
            android:layout_marginTop="0dp"
            android:hint="@string/from"
            android:inputType="text"
            android:gravity="center|left"
            android:textColor="@android:color/black"
            android:onClick="showTimePickerDialog"
            />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="#fff"
            android:gravity="center"
            android:text="@string/timing_to"
            android:inputType="text"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/to"
            android:layout_width="match_parent"
            android:layout_weight="1.0"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timings">

        <EditText
            android:id="@+id/edit_text_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="15dp"
            android:focusable="false"
            android:hint="@string/to"
            android:inputType="text"
            android:gravity="center|left"
            android:textColor="@android:color/black"
            android:onClick="showTimePickerDialog"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/subject_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timings">

        <EditText
            android:id="@+id/edit_text_subject_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="0dp"
            android:hint="@string/placeholder_subject_name"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subject_name">

        <EditText
            android:id="@+id/edit_text_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="0dp"
            android:hint="@string/placeholder_room_dialog"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/cancel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/room"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:text="@string/cancel"
        android:textColor="?attr/colorAccent" />

    <Button
        android:id="@+id/done"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/room"
        android:layout_gravity="center"
        android:layout_marginStart="0.5dp"
        android:layout_toEndOf="@+id/cancel"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:text="@string/done"
        android:textColor="?attr/colorAccent" />

</RelativeLayout>
