<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="301dp"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <TextView
        android:id="@+id/delete_cnf"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="20dp"
        android:text="@string/deletion_confirmation"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/no"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delete_cnf"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:text="@string/no"
        android:textColor="?attr/colorAccent" />

    <Button
        android:id="@+id/yes"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delete_cnf"
        android:layout_gravity="center"
        android:layout_marginStart="0.5dp"
        android:layout_toEndOf="@+id/no"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:text="@string/yes"
        android:textColor="?attr/colorAccent" />

</RelativeLayout>
