<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/placeholder_time"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/time"
                android:background="#00ffffff"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:text="@string/placeholder_subject"
                android:textColor="#000"
                android:textSize="30sp" />

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subject"
                android:background="#00ffffff"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:text="@string/placeholder_room"
                android:textColor="#000"
                android:textSize="15sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>